Make button responsive for mobile use Design buttons with proportions of canvas so buttons will scale with the canvas size. This makes it easy to read for mobile users whose screen width is much smaller.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,10 +45,17 @@ canvas {
 
 .button-controls {
   background-color: darkgray;
-  border-radius: 10px;
-  width: 5vw;
+  border-radius: 25px;
+  font-size: 200%;
+  height: fit-content;
+  width: fit-content;
+  padding: 1% 3%;
 }
 
 .button-controls:hover {
   background-color: gray;
+}
+
+.button-controls:active {
+  background-color: blue;
 }
