Add sliders and labels for size and speed These sliders are currently unstyled and not functional, but when testing different sizes ran into issues with how each grid square is scaling creating large gaps in the overall canvas.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,15 @@ canvas {
   width: min(80vw, 80vh);
 }
 
-#control-container {
+#button-container {
+  display: flex;
+  width: min(80vw, 80vh);
+  justify-content: space-around;
+  margin: 0 auto;
+  margin-top: 3vh;
+}
+
+.range-container {
   display: flex;
   width: min(80vw, 80vh);
   justify-content: space-around;
@@ -48,7 +56,7 @@ canvas {
   border-radius: 25px;
   font-size: 200%;
   height: fit-content;
-  width: fit-content;
+  width: 18%;
   padding: 1% 3%;
 }
 
